Try fix glitch scroll movement in mobile view

--- a/src/sass/base/_base.scss
+++ b/src/sass/base/_base.scss
@@ -52,6 +52,6 @@ body{
         max-width: 700px;
     }
     @include screenSize(small){
-        overflow-x: hidden;
+        overflow: hidden;
     }
 }
